        displayed observer and the ObserverWidget is set to use its observer hints, instead of custom hints.
    [#] ObserverWidget::setUseObserverHints() will now refresh the hints on the widget when toggled.
	[#] Improved ConfigurationWidget's control of when Apply button is shown and also add an OK button.

    [-] Removed ObserverWidget::writeSettings() and ObserverWidget::readSettings().
    [-] Removed the functionality in ObserverWidget where it will append the contexts of any selected objects
        that implements IContext in the context manager. This is unnecessary overhead and can easily be implemented
        wherever its needed by connecting a slot to the selectedObjectsChanged() signal on ObserverWidget. The following
        functions were removed from ObserverWidget: appendSelectedContexts() and setAppendSelectedContexts().
    [-] Removed the code which allowed ObserverTreeModel to build its internal tree representation in a different
        thread. This was never really tested and its not needed.

    [*] Fixed compilation issues against Qt5 when property browser is enable using DEFINES += QTILITIES_PROPERTY_BROWSER
    [*] Fixed bug where ProhibitDuplicateNamesCaseSensitive was not handled properly in NamingPolicyFilter::evaluateAttachment()
    [*] Fixed double emission of selectedObjectsChanged() when the tree parent observer changes when in tree view mode.
    [*] Fixed ObserverWidget not respecting the ObserverHints::ItemViewColumnFlags of new selections in TreeView mode.
    [*] Fixed ObserverWidget not keeping its selection when refreshing while using the ObserverHints::RootIndexHide hint.
    [*] Fixed ObserverWidget not keeping its expanded nodes when refreshing while using the ObserverHints::RootIndexHide hint.
	[*] Fixed crash in ActionManager::unregisterCommandsForContext() when there was not command registered in the action manager.
	[*] Fixed memory leak in WidgetLoggerEngineFrontend.
	[*] Fixed memory leak in SearchBoxWidget.